# MemoryAllocatorC

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.c  memory_manage.c  memory_manage.h  tester.h
